feat(auth-service): update API endpoints to remove version prefix and enhance logging

--- a/auth-service/docker-compose.yml
+++ b/auth-service/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       context: ..
       dockerfile: auth-service/Dockerfile
     container_name: auth-service
+    restart: always
     env_file:
       - ./.env
     ports:
