--- a/auth-service/docker-compose.yml
+++ b/auth-service/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres-auth-data:/var/lib/postgresql/data
+      - ../auth-service/internal/db/schema.sql:/docker-entrypoint-initdb.d/init.sql:ro
   
   auth-service:
     build:
