--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,11 @@ services:
       - "5432:5432"
     volumes:
       - postgres-auth-data:/var/lib/postgresql/data
-      - ../auth-service/internal/db/schema.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ./auth-service/internal/db/schema.sql:/docker-entrypoint-initdb.d/init.sql:ro
   
   auth-service:
     build:
-      context: ..
+      context: .
       dockerfile: auth-service/Dockerfile
     container_name: auth-service
     restart: always
@@ -25,6 +25,24 @@ services:
       - "8080:8080"
     depends_on:
       - postgres-auth
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+
+  kafka:
+    image: confluentinc/cp-kafka:7.4.0
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    depends_on:
+      - zookeeper
 
 volumes:
   postgres-auth-data:
