--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ POSTGRES_USER=binh
 POSTGRES_PASSWORD=secret
 POSTGRES_DB=auth_db
 COMPOSE_BAKE=true
+
+RABBITMQ_URL=amqp://guest:guest@localhost:5672/
