--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ POSTGRES_PASSWORD=secret
 POSTGRES_DB=auth_db
 COMPOSE_BAKE=true
 
-RABBITMQ_URL=amqp://guest:guest@localhost:5672/
+RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
